--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
     <div class="grid">
         <div id="roof">
-            <p id="entry">	&#128274 ВХОД В СИСТЕМУ</p>
+            <p id="entry">	&#128274 ВХОД В СИСТЕМУ
+                
+            </p>
+            <p id="reg"><a style="color: white" href="servey_form.html">Регистрация</a></p>
 
          
         </div>
